refactored login and signup pages to use antd form validation repaired missing visibility at metadata update

--- a/packages/container/src/App.css
+++ b/packages/container/src/App.css
@@ -15,3 +15,7 @@
 .ant-menu-submenu .ant-menu-item-active {
     background-color: #001529 !important;
 }
+
+.auth-form .ant-form-item-required:after {
+    display: none;
+}
